Add google analytics, closest access point finder, misc more

--- a/jekyll-site/_sass/nav.scss
+++ b/jekyll-site/_sass/nav.scss
@@ -27,6 +27,10 @@
                 margin-top: -2px;
             }
         }
+
+        .navbar-toggle .icon-bar {
+            background-color: #fff;
+        }
     }
 
     .navbar-nav {
