--- a/jekyll-site/_layouts/default.html
+++ b/jekyll-site/_layouts/default.html
@@ -13,7 +13,7 @@
     <link href="/css/site.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-default{% if page.fixednav %} navbar-fixed-top{% endif %}">
+    <nav class="navbar navbar-default{% if page.fixednav %} navbar-fixed-top{% endif %}">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
@@ -107,6 +107,15 @@
         $(function() {
             $('.swipebox').swipebox({loopAtEnd: true});
         });
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-63283023-1', 'auto');
+      ga('send', 'pageview');
     </script>
 </body>
 </html>
