--- a/jekyll-site/_sass/nav.scss
+++ b/jekyll-site/_sass/nav.scss
@@ -56,7 +56,20 @@
         .dropdown-menu {
             li {
                 a {
-                    color: #563042;
+                    color: #fff;
+                }
+            }
+            .dropdown-header {
+                color: #fff;
+            }
+        }
+
+        .open {
+            .dropdown-menu {
+                li {
+                    a {
+                        color: #fff;
+                    }
                 }
             }
         }
