Add twitter cards and facebook opengraph

--- a/jekyll-site/_layouts/default.html
+++ b/jekyll-site/_layouts/default.html
@@ -12,6 +12,8 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/swipebox.min.css" rel="stylesheet">
     <link href="/css/site.css" rel="stylesheet">
+    {% include twitter_card.html %}
+    {% include facebook_opengraph.html %}
     <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
     <script>
         Raven.config('https://1b087017e03f45fda16d93e443cce69b@app.getsentry.com/45220', {
