--- a/jekyll-site/_sass/nav.scss
+++ b/jekyll-site/_sass/nav.scss
@@ -56,20 +56,7 @@
         .dropdown-menu {
             li {
                 a {
-                    color: #fff;
-                }
-            }
-            .dropdown-header {
-                color: #fff;
-            }
-        }
-
-        .open {
-            .dropdown-menu {
-                li {
-                    a {
-                        color: #fff;
-                    }
+                    color: #563042;
                 }
             }
         }
