--- a/jekyll-site/_includes/gallery_header.html
+++ b/jekyll-site/_includes/gallery_header.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>{{template "title" .}}</title>
+        <title>{% if page.title %}{{ page.title }}{% else %}ReFraming Ruin{% endif %}</title>
         <link href='http://fonts.googleapis.com/css?family=Vollkorn|Montserrat:400,700' rel='stylesheet' type='text/css'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body class="{{template "bodyClass" .}}">
+    <body class="{{ include.body_class }}">
         <script>
           window.fbAsyncInit = function() {
             FB.init({
@@ -51,30 +51,4 @@
                 </p>
             </div>
         </nav>
-        {{template "content" .}}
-        <footer>
-            <div class="container">
-                <h4 class="slogan">Look Up! It’s The Bloomingdale Trail</h4>
-                <p class="copyright">Copyright &copy; 2015 <span class="fbt">Friends of the Bloomingdale Trail</fbt>. Some rights reserved.</p>
-                <p class="cc">
-                    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Friends of the Bloomingdale Trail website</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-                </p>
-            </div>
-        </footer>
 
-        <script src="/js/lib/jquery-1.11.2.min.js"></script>
-        <script src="/js/lib/bootstrap.min.js"></script>
-        <script src="/js/lib/jquery.justifiedGallery.min.js"></script>
-        <script src="/js/lib/jquery.swipebox.min.js"></script>
-        <script src="/js/gallery.js"></script>
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-63283023-1', 'auto');
-          ga('send', 'pageview');
-        </script>
-    </body>
-</html>
