--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,34 @@
 ---
 layout: default
 ---
-<div class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">
-        {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
-    </p>
-  </header>
+<div class="page row">
+    <div class="col-lg-offset-2 col-lg-8">
+        <h2><a href="/blog/">The FBT Blog</a></h2>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+        <div class="post">
+          <header class="post-header">
+            <h1 class="post-title">{{ page.title }}</h1>
+            <p class="post-meta">
+                {{ page.date | date: "%B %-d, %Y" }}{% if page.author %} • by {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}
+            </p>
+          </header>
+
+          <article class="post-content">
+            {{ content }}
+          </article>
+        </div>
+
+        <div class="blog-nav row">
+            <div class="prev-post col-lg-6">
+            {% if page.previous %}
+                Previous: <a href="{{ page.previous.url }}">{{ page.previous.title }}</a>
+            {% endif %}
+            </div>
+            <div class="next-post col-lg-6 text-right">
+            {% if page.next %}
+                Next: <a href="{{ page.next.url }}">{{ page.next.title }}</a>
+            {% endif %}
+            </div>
+        </div>
+    </div>
 </div>
