Add PAC meeting post

--- a/css/site.scss
+++ b/css/site.scss
@@ -161,6 +161,11 @@ a[href^="https://"]:after {
 .bt-abcs {
   background-image: url(../img/abc_fbt_display.jpg);
 }
+
+.bt-pac {
+  background-image: url(../img/ribbon-cutting-collage.jpg);
+  background-size: contain;
+}
       
 .reframing-ruin-teaser {
     background-image: url(../img/JFisher1.jpg);
